--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    // "dev": "vite",
+    // "build": "vite build",
     "preview": "vite preview --port 5173",
     "start": "vite",
 
